--- a/Lab01_Basic_Python.ipynb
+++ b/Lab01_Basic_Python.ipynb
@@ -1407,6 +1407,164 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "x = 10\n",
+        "x += 3   # now x = 13\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jm8yWNkq9h-e",
+        "outputId": "bbbf674f-07f7-42ca-d4c9-0f68e1c43230"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Logical Operators\n",
+        "*   Used in decision making (True/False)\n",
+        "| Operator | Meaning                 | Example              |\n",
+        "| -------- | ----------------------- | -------------------- |\n",
+        "| `and`    | True if both are true   | `(5 > 2 and 3 < 7)`  |\n",
+        "| `or`     | True if any one is true | `(5 > 10 or 4 == 4)` |\n",
+        "| `not`    | Reverses result         | `not(5 > 2)`         |\n"
+      ],
+      "metadata": {
+        "id": "xe2TtQJP9rz1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "age = 24\n",
+        "citizen = True\n",
+        "if age >= 18 and citizen:\n",
+        "    print(\"Eligible to vote\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DdGOh2Ry90DN",
+        "outputId": "1e9becb4-b6d6-4a50-fc19-4a553307598f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eligible to vote\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Logical Membership Operators (in, not in)\n",
+        "*   Used to check if a value exists in a list, string, etc.\n",
+        "| Operator | Example            | Result |\n",
+        "| -------- | ------------------ | ------ |\n",
+        "| `in`     | `\"a\" in \"apple\"`   | True   |\n",
+        "| `not in` | `3 not in [1,2,4]` | True   |\n"
+      ],
+      "metadata": {
+        "id": "kjOcYf3a-AFO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Identity Operators (is, is not)\n",
+        "*   Checks memory location of objects."
+      ],
+      "metadata": {
+        "id": "ggzeMxoj-ae2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "x = [1,2,3]\n",
+        "y = x\n",
+        "print(x is y)         # True\n",
+        "print(x is not y)     # False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yDDcUxY6-maO",
+        "outputId": "4eef56ca-e87c-45a6-bc7c-fc3a23d56746"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. Bitwise Operators (works on binary numbers)"
+      ],
+      "metadata": {
+        "id": "x7AVqoU0-vy2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| Operator | Meaning     |    |\n",
+        "| -------- | ----------- | -- |\n",
+        "| `&`      | AND         |    |\n",
+        "| `        | `           | OR |\n",
+        "| `^`      | XOR         |    |\n",
+        "| `~`      | NOT         |    |\n",
+        "| `<<`     | Left shift  |    |\n",
+        "| `>>`     | Right shift |    |\n"
+      ],
+      "metadata": {
+        "id": "qD293rys-3Eu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "print(5 & 3)    # Binary AND\n",
+        "print(5 | 2)    # Binary OR"
+      ],
+      "metadata": {
+        "id": "tqtbJAkH-91m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
@@ -1673,7 +1831,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPreOs5lWafc7Dsz2gSDIBk",
+      "authorship_tag": "ABX9TyNL5VuQr0QxRQjxbTEKuo+V",
       "include_colab_link": true
     },
     "kernelspec": {
