--- a/Lab03_Multi_LinearRegression_Model_Revenue_Prediction.ipynb
+++ b/Lab03_Multi_LinearRegression_Model_Revenue_Prediction.ipynb
@@ -27,7 +27,7 @@
       "source": [
         "\n",
         "*   `Problem Statement:` A medium-sized distribution company wants to develop a multiple linear regression model to predict its monthly revenue based on operational expenses and marketing efforts. The company has collected 500 months of historical data, recording the following variables each month: transportation cost, stationery cost, packaging cost, advertising cost, and employee salaries, along with the corresponding revenue generated. Your task is to build a multiple linear regression model. After fitting the model, you should evaluate the impact of each variable on revenue, interpret the regression coefficients, assess model accuracy using metrics such as R² and MSE, and use the model to predict revenue for new input values. `Inline code`\n",
-        "    * Model formula: yy=a0​+a1​x1​+a2​x2​+⋯+an​xn​\n",
+        "    * Model formula: y=a0​+a1​x1​+a2​x2​+⋯+an​xn​\n",
         "    * Where: x1,x2,x3 -->Independet variable\n",
         "    * y--> Dependent variable\n",
         "    * a1,a2,a3--an-> coefficients/slope/weghts\n",
@@ -40,7 +40,7 @@
         "id": "np5nYyg2IhGX"
       },
       "source": [
-        "`*   Step-1; Import Necessary Labraries`"
+        "Step-1: Import Necessary Labraries`"
       ]
     },
     {
@@ -60,7 +60,7 @@
         "id": "PhcMMIqwIOxj"
       },
       "source": [
-        "*   `Step-2: Import/loaad the dataset`"
+        "`Step-2: Import/loaad the dataset`"
       ]
     },
     {
@@ -80,7 +80,7 @@
         "id": "EBzYRzBUIA1F"
       },
       "source": [
-        "*   `Step-3: Dataset description/ Quick data check`\n",
+        "`Step-3: Dataset description/ Quick data check`\n",
         "*   `*Imortant Note:*`\n",
         "    * Dataset descriptions/ quick data check-Help you understand the structure, size, and quality of your dataset before doing machine learning.\n",
         "*   `data`\n",
@@ -2728,7 +2728,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfiaVhlYuzP1iMxfJ1Tyx6",
+      "authorship_tag": "ABX9TyOHfJ9MoFpdnVWU/L75grwk",
       "include_colab_link": true
     },
     "kernelspec": {
